# github-delete

./: README.md  package.json  setup.cfg  setup.py
scripts/: github-delete
