# https://pypi.org/project/setupcfg-generator/
[metadata]
name = github-delete
version = 2019.5.8
url = https://github.com/looking-for-a-job/github-delete
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = github

[options]
install_requires = 
	setuptools
scripts = 
	scripts/github-delete
